--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "",
   "homepage": "https://MalgorzataMarczynska.github.io/Hellen_website",
+  "type": "module",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /Hellen_website/"
@@ -18,7 +19,9 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "express": "^4.18.2",
+    "modern-normalize": "^1.1.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
